# f1-telemetry-analysis

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
f1-telemetry-analysis/: README.md
f1-telemetry-analysis/f1_analysis/core/: __init__.py  telemetry.py
f1-telemetry-analysis/f1_analysis/reports/: session_report.py
f1-telemetry-analysis/f1_analysis/visualization/: plots.py  style.py
f1-telemetry-analysis/scripts/: 03_season_championship.py  04_track_speed_map.py
f1-telemetry-analysis/tests/: test_lap_analysis.py  test_session_report.py
f1_analysis/: __init__.py
f1_analysis/core/: lap_analysis.py  multi_season.py  pit_window.py  quali_delta.py  season.py  session_loader.py
f1_analysis/ml/: __init__.py  base.py  data_builder.py  lap_time.py  race_finish.py  tire_compound.py  undercut.py
f1_analysis/reports/: __init__.py
f1_analysis/visualization/: __init__.py  insights.py  plots.py  style.py  ui_theme.py
outputs/models/: lap_time_2024.pkl  undercut_2024.pkl
outputs/models/2024_LEC/: lap_time.pkl  race_finish.pkl  (+1 more)
pages/: 10_tire_degradation.py  11_Live_Timing.py  1_Deep_Dive.py  2_Head_to_Head.py  3_Season_Championship.py  4_Track_Speed_Map.py  5_Single_Race_Predict.py  6_Race_Story.py  7_Quali_Delta.py  8_Pit_Window.py  9_Multi_Season.py
scripts/: 01_session_deep_dive.py  02_driver_head_to_head.py  05_ml_season_models.py  06_ml_single_race_predict.py  07_race_story.py  08_quali_delta.py  09_pit_window.py  10_multi_season.py  11_team_performance.py
tests/: test_ml_models.py  test_plots.py
